# GWFish

./: .gitignore  .readthedocs.yaml  CBC_Background.py  CBC_Population.py  CBC_Priors.py  CBC_Simulation.py  CHANGELOG.md  Errors_ET_BBH_SNR9.0.txt  Fisher_ET_BBH_SNR9.0.txt  Inverse_Fisher_ET_BBH_SNR9.0.txt  README.md  Signals_BBH.txt  TutorialTimeFrequencySeries.ipynb  clear.sh  detConfig.yaml  fisher_integrand.py  gwfish_paper1_table3.ipynb  gwfish_tutorial.ipynb  minimax_tilting_sampler.py  priors.py  priors_tutorial.ipynb  pyproject.toml  pytest.ini  read_errors.py  series_snr_tutorial.ipynb  setup.py  test.ipynb  test_gwtc.ipynb  tools.py  tox.ini
.github/workflows/: CI.yml
GWFish/: __init__.py  detectors.yaml
GWFish/detector_psd/: AplusDesign_psd.txt  Asharp_strain_psd.txt  CE1_psd.txt  CE20_psd.txt  CE40_psd.txt  ET_10_HF_psd.txt  ET_cryo_10km_psd.txt  ET_cryo_15km_psd.txt  ET_psd.txt  Kagra_128Mpc_psd.txt  LGWA_Nb_psd.txt  LGWA_Si_psd.txt  LGWA_Soundcheck_psd.txt  (+9 more)
docs/: Makefile  README.md  generate_includes.py
gwtc_results/: fisher_matrices_H1_L1_V1_median_BBH_IGWN-GWTC2p1-v2-GW190926_050336_PEDataRelease_mixed_cosmo_SNR1.npy  fisher_matrices_H1_L1_median_BBH_IGWN-GWTC2p1-v2-GW151012_095443_PEDataRelease_mixed_cosmo_SNR1.npy  inv_fisher_matrices_H1_L1_V1_median_BBH_IGWN-GWTC2p1-v2-GW190926_050336_PEDataRelease_mixed_cosmo_SNR1.npy  inv_fisher_matrices_H1_L1_median_BBH_IGWN-GWTC2p1-v2-GW151012_095443_PEDataRelease_mixed_cosmo_SNR1.npy
injections/: BBH_pop_test.hdf5  BNS_pop_test.hdf5  CBC_pop.hdf5  CBC_pop_15plus30.hdf5  CBC_pop_30plus60.hdf5  CBC_pop_5plus10.hdf5  CBC_pop_trial1.hdf5  GWTC-3.txt  GWTC3_cosmo_median.hdf5  PBH_p_M1.txt  PBH_p_q.txt
test_data/: Fishers_ET_BBH_SNR8.0.npy  Inv_Fishers_ET_BBH_SNR8.0.npy  New_Cov_Matrices.npy  Sing_Values_ET_BBH_SNR8.0.npy  test_data.hdf5
tests/: conftest.py  plots_and_transformations.py  test_antenna_pattern.py  test_ephemeris.py  test_fisher_output.py  test_horizon.py  test_localization.py  test_masses.py  test_matrix_inversion.py  test_moon.py  test_projection.py  test_quasi_monochromatic.py  test_skyloc.py  test_waveforms.py
(+58 files in other folders)
