[tool.poetry]
name = "GWFish"
version = "0.1.0"
description = "A Fisher Matrix code for third-generation gravitational wave detectors."
authors = ["Jan Harms <jan.harms@gssi.it>"]
packages = [
    { include = "GWFish" },
    { include = "GWFish/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.22.2"
tables = "^3.7.0"
pandas = "^1.4.1"
astropy = "^5.0.1"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"
sympy = "^1.10.1"

[tool.poetry.group.waveforms.dependencies]
lalsuite = ">=7.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2022.6.21"
myst-parser = "^0.18.0"
sphinx-copybutton = "^0.5.0"
readthedocs-sphinx-search = "^0.1.2"
sphinxcontrib-bibtex = "^2.4.2"
sphinx-toolbox = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
tox = "^3.24.5"
ipython = "^8.4.0"
pytest-sugar = "^0.9.6"
healpy = "^1.16.2"
pycbc = "^2.2.0"
hypothesis = "^6.75.2"
pytest-mock = "^3.11.1"

[tool.poetry.extras]
waveforms = ["lalsuite"]
docs = ["furo", 
        "myst-parser", 
        "sphinx-copybutton", 
        "readthedocs-sphinx-search", 
        "sphinxcontrib-bibtex", 
        "sphinx-toolbox"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
